<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.demojetpack.view.login.LogInViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/textView_login_login"
            android:layout_width="wrap_content"
            android:text="@string/login_login"
            android:textSize="@dimen/textSize_all_header_48dp"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_all_textInput_16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/textInputLayout_login_account"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_chainStyle="packed"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_login_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/all_account"
            app:startIconDrawable="@drawable/all_ic_account_24dp"
            app:endIconMode="clear_text"
            android:layout_margin="@dimen/margin_all_textInput_16dp"
            app:layout_constraintTop_toBottomOf="@id/textView_login_login"
            app:layout_constraintBottom_toTopOf="@id/textInputLayout_login_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.accountInputText}"
                android:maxLines="1"
                android:inputType="text"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/all_password"
            app:startIconDrawable="@drawable/all_ic_password_24dp"
            app:endIconMode="password_toggle"
            android:layout_margin="@dimen/margin_all_textInput_16dp"
            app:layout_constraintTop_toBottomOf="@id/textInputLayout_login_account"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/button_login_login"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:text="@={viewModel.passwordInputText}"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/button_login_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_login"
            android:layout_margin="@dimen/margin_all_textInput_16dp"
            app:layout_constraintTop_toBottomOf="@id/textInputLayout_login_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/textView_login_createAccount"/>
        <TextView
            android:id="@+id/textView_login_createAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_doNotHaveAccount"
            android:layout_margin="@dimen/margin_all_textInput_16dp"
            app:layout_constraintTop_toBottomOf="@id/button_login_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>