<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.demojetpack.view.register.RegisterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/textView_register_register"
            android:layout_width="wrap_content"
            android:text="@string/register_register"
            android:textSize="@dimen/textSize_all_header_48dp"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_all_textInput_16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/textInputLayout_register_account"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_chainStyle="packed"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_register_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/all_account"
            app:endIconMode="clear_text"
            android:layout_margin="@dimen/margin_all_textInput_16dp"
            app:layout_constraintTop_toBottomOf="@id/textView_register_register"
            app:layout_constraintBottom_toTopOf="@id/textInputLayout_register_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.account}"
                android:maxLines="1"
                android:inputType="text"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/all_password"
            android:layout_margin="@dimen/margin_all_textInput_16dp"
            app:endIconMode="password_toggle"
            app:layout_constraintTop_toBottomOf="@id/textInputLayout_register_account"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/textInputLayout_register_name"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:text="@={viewModel.password}"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/all_name"

            app:endIconMode="clear_text"
            android:layout_margin="@dimen/margin_all_textInput_16dp"
            app:layout_constraintTop_toBottomOf="@id/textInputLayout_register_password"
            app:layout_constraintBottom_toTopOf="@id/textInputLayout_register_phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.name}"
                android:maxLines="1"
                android:inputType="text"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_register_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/all_phone"
            app:endIconMode="clear_text"
            android:layout_margin="@dimen/margin_all_textInput_16dp"
            app:layout_constraintTop_toBottomOf="@id/textInputLayout_register_name"
            app:layout_constraintBottom_toTopOf="@id/button_register_register"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.phone}"
                android:maxLines="1"
                android:inputType="phone"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_register_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_register"
            android:layout_margin="@dimen/margin_all_textInput_16dp"
            app:layout_constraintTop_toBottomOf="@id/textInputLayout_register_phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>